[package]
name = "suffix-rs"
version = "0.1.0"
authors = ["nephtys <christopher.kaag@gmail.com>"]


# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown).
description = "A small generic trait describing generalized suffix trees in Rust, currently only with a mock implementation. A real implementation using Ukkonen'S Algorithm will follow in future releases"

# These URLs point to more information about the repository. These are
# intended to be webviews of the relevant data, not necessarily compatible
# with VCS tools and the like.
repository = "https://github.com/n3phtys/suffix-rs"


# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can be
# separated with a `/`.
license = "MIT"


[dependencies]
serde = "1.0.11"
serde_derive = "1.0.11"
serde_json = "1.0.2"